--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./src/server.js",
-    "dev": "nodemon ./src/server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +19,7 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
+    "generate-unique-id": "^2.0.3",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
@@ -27,6 +28,7 @@
     "nodemailer": "^6.9.14",
     "pg": "^8.12.0",
     "sequelize": "^6.37.3",
+    "stripe": "^16.5.0",
     "winston": "^3.13.0"
   },
   "devDependencies": {
