--- a/landing/package.json
+++ b/landing/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "classnames": "^2.5.1",
+    "hamburger-react": "^2.5.2",
     "react": "^18.3.1",
+    "react-animations": "^1.0.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
